@@ -1,13 +1,19 @@
 package com.robertx22.mine_and_slash.database.stats.stat_types.core_stats;
 
 import com.robertx22.mine_and_slash.database.stats.Stat;
-import com.robertx22.mine_and_slash.database.stats.StatMod;
 import com.robertx22.mine_and_slash.saveclasses.StatData;
 import com.robertx22.mine_and_slash.saveclasses.gearitem.StatModData;
+import com.robertx22.mine_and_slash.saveclasses.gearitem.gear_bases.TooltipInfo;
 import com.robertx22.mine_and_slash.uncommon.capability.EntityCap;
 import com.robertx22.mine_and_slash.uncommon.enumclasses.Elements;
+import com.robertx22.mine_and_slash.uncommon.localization.Styles;
 import com.robertx22.mine_and_slash.uncommon.utilityclasses.StatUtils;
 import net.minecraft.util.math.MathHelper;
+import net.minecraft.util.text.ITextComponent;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.stream.Collectors;
 
 public abstract class BaseCoreStat extends Stat implements ICoreStat {
 
@@ -41,18 +47,34 @@ public abstract class BaseCoreStat extends Stat implements ICoreStat {
         return StatUtils.calculateBaseStatScalingStatGrowth(stat, lvl);
     }
 
+    public float getPercent(EntityCap.UnitData unitdata, StatData data) {
+        return MathHelper.clamp(data.Value / calculateScalingStatGrowth(this.amountToReach100Percent(), unitdata
+                .getLevel()) * 100, 0, 100000);
+    }
+
+    public List<ITextComponent> getCoreStatTooltip(EntityCap.UnitData unitdata,
+                                                   StatData data) {
+
+        TooltipInfo info = new TooltipInfo(unitdata, null, unitdata.getLevel());
+
+        List<ITextComponent> list = new ArrayList<>();
+        list.add(Styles.GREENCOMP().appendText("Stats that benefit: "));
+        getMods(unitdata, data).forEach(x -> list.addAll(x.GetTooltipString(info)));
+        return list;
+
+    }
+
+    public List<StatModData> getMods(EntityCap.UnitData unitdata, StatData data) {
+        return this.statsThatBenefit()
+                .stream()
+                .map(x -> StatModData.Load(x, (int) getPercent(unitdata, data)))
+                .collect(Collectors.toList());
+
+    }
+
     @Override
     public void addToOtherStats(EntityCap.UnitData unitdata, StatData data) {
-
-        float percent = data.Value / calculateScalingStatGrowth(this.amountToReach100Percent(), unitdata
-                .getLevel()) * 100;
-
-        percent = MathHelper.clamp(percent, 0, 1000000);
-
-        for (StatMod statmod : this.statsThatBenefit()) {
-            StatModData.Load(statmod, (int) percent).useOnPlayer(unitdata);
-        }
-
+        getMods(unitdata, data).forEach(x -> x.useOnPlayer(unitdata));
     }
 
 }
